--- a/ubuntu/16.04/2.107.0/Dockerfile
+++ b/ubuntu/16.04/2.107.0/Dockerfile
@@ -13,11 +13,6 @@ RUN apt-get update \
         libunwind8 \
  && rm -rf /var/lib/apt/lists/*
 
-RUN set -x \
- && curl -fSL https://github.com/Yelp/dumb-init/releases/download/v1.1.3/dumb-init_1.1.3_amd64 -o /usr/local/bin/dumb-init \
- && chmod +x /usr/local/bin/dumb-init \
- && /usr/local/bin/dumb-init -V
-
 RUN adduser --system --group vsts
 WORKDIR /home/vsts/agent
 
@@ -28,7 +23,7 @@ RUN set -x \
  && rm agent.tgz
 
 COPY ./start.sh .
-RUN chown vsts:vsts start.sh
+RUN chown vsts:vsts start.sh \
+ && chmod +x start.sh
 
-ENTRYPOINT ["/usr/local/bin/dumb-init", "--"]
 CMD ["./start.sh"]
