--- a/windows/nano/10.0.14393/Dockerfile
+++ b/windows/nano/10.0.14393/Dockerfile
@@ -1,3 +1,6 @@
+# the agent currently will not start on nanoserver due to some powershell issue.
+
+
 FROM microsoft/nanoserver:10.0.14393.447
 ENV WINDOWS_IMAGE_VERSION 10.0.14393.447
 
