--- a/ubuntu/derived/standard/Dockerfile.template
+++ b/ubuntu/derived/standard/Dockerfile.template
@@ -26,10 +26,20 @@ RUN echo "deb [arch=amd64] http://apt-mo.trafficmanager.net/repos/dotnet-release
     # Java and related build tools
     openjdk-$(OPENJDK_VERSION)-jdk \
     ant \
-    gradle \
-    maven \
     # .NET Core SDK
     dotnet-dev-1.0.0-preview2-003131 \
+ && rm -rf /var/lib/apt/lists/*
+
+# Install gradle separately to avoid apt-get errors
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends \
+    gradle \
+ && rm -rf /var/lib/apt/lists/*
+
+# Install maven separately to avoid apt-get errors
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends \
+    maven \
  && rm -rf /var/lib/apt/lists/*
 
 # Install stable Node.js and related build tools
