Add support for new Docker versions. Also update docker-compose to 1.11.2.

--- a/ubuntu/16.04/tfs/2017/docker/17.03.0-ce/Dockerfile
+++ b/ubuntu/16.04/tfs/2017/docker/17.03.0-ce/Dockerfile
@@ -1,8 +1,8 @@
 FROM microsoft/vsts-agent:ubuntu-16.04-tfs-2017
 
 ENV DOCKER_BUCKET get.docker.com
-ENV DOCKER_VERSION 1.11.2
-ENV DOCKER_SHA256 8c2e0c35e3cda11706f54b2d46c2521a6e9026a7b13c7d4b8ae1f3a706fc55e1
+ENV DOCKER_VERSION 17.03.0-ce
+ENV DOCKER_SHA256 4a9766d99c6818b2d54dc302db3c9f7b352ad0a80a2dc179ec164a3ba29c2d3e
 
 RUN set -x \
  && curl -fSL "https://${DOCKER_BUCKET}/builds/`uname -s`/`uname -m`/docker-${DOCKER_VERSION}.tgz" -o docker.tgz \
