Support git lfs in versioned images

--- a/ubuntu/versioned/Dockerfile.template
+++ b/ubuntu/versioned/Dockerfile.template
@@ -11,6 +11,8 @@ RUN apt-get update \
         libcurl3 \
         libicu$(LIBICU_VERSION) \
         libunwind8 \
+ && curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | bash \
+ && apt-get install -y --no-install-recommends git-lfs \
  && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /vsts
