--- a/ubuntu/16.04/docker/1.11.2/standard/Dockerfile
+++ b/ubuntu/16.04/docker/1.11.2/standard/Dockerfile
@@ -1,77 +1,21 @@
-FROM microsoft/vsts-agent:ubuntu-16.04-docker-1.11.2
+FROM microsoft/vsts-agent:ubuntu-16.04-standard
 
-# Install packages
-RUN echo "deb [arch=amd64] http://apt-mo.trafficmanager.net/repos/dotnet-release/ xenial main" > /etc/apt/sources.list.d/dotnetdev.list \
- && apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 417A0893 \
- && apt-get update \
- && apt-get install -y --no-install-recommends \
-    # Basic utilities
-    curl \
-    dnsutils \
-    ftp \
-    iproute2 \
-    iputils-ping \
-    openssh-client \
-    sudo \
-    telnet \
-    time \
-    unzip \
-    wget \
-    zip \
-    # Essential build tools (gcc, make, etc.)
-    build-essential \
-    # Python
-    python \
-    python3 \
-    # .NET Core SDK
-    dotnet-dev-1.0.1 \
- && rm -rf /var/lib/apt/lists/*
+ENV DOCKER_BUCKET get.docker.com
+ENV DOCKER_VERSION 1.11.2
+ENV DOCKER_SHA256 8c2e0c35e3cda11706f54b2d46c2521a6e9026a7b13c7d4b8ae1f3a706fc55e1
 
-# Install Oracle JDKs
-RUN echo debconf shared/accepted-oracle-license-v1-1 select true | debconf-set-selections \
- && echo debconf shared/accepted-oracle-license-v1-1 seen true | debconf-set-selections \
- && apt-add-repository -y ppa:webupd8team/java \
- && apt-get update \
- && apt-get install -y --no-install-recommends \
-    oracle-java6-installer \
-    oracle-java7-installer \
-    oracle-java8-installer \
- && rm -rf /var/lib/apt/lists/*
+RUN set -x \
+ && curl -fSL "https://${DOCKER_BUCKET}/builds/`uname -s`/`uname -m`/docker-${DOCKER_VERSION}.tgz" -o docker.tgz \
+ && echo "${DOCKER_SHA256} *docker.tgz" | sha256sum -c - \
+ && tar -xzvf docker.tgz \
+ && mv docker/* /usr/local/bin/ \
+ && rmdir docker \
+ && rm docker.tgz \
+ && docker -v
 
-# Install ant separately to avoid apt-get errors
-RUN apt-get update \
- && apt-get install -y --no-install-recommends \
-    ant \
-    ant-optional \
- && rm -rf /var/lib/apt/lists/*
+ENV DOCKER_COMPOSE_VERSION 1.11.2
 
-# Install maven separately to avoid apt-get errors
-RUN apt-get update \
- && apt-get install -y --no-install-recommends \
-    maven \
- && rm -rf /var/lib/apt/lists/*
-
-# Install gradle separately to avoid apt-get errors
-RUN apt-get update \
- && apt-get install -y --no-install-recommends \
-    gradle \
- && rm -rf /var/lib/apt/lists/*
-
-# Install stable Node.js and related build tools
-RUN curl -sL https://git.io/n-install | bash -s -- -ny - \
- && ~/n/bin/n stable \
- && npm install -g bower grunt gulp n \
- && rm -rf ~/n
-
-# Configure environment variables
-ENV ANT_HOME=/usr/share/ant \
-    bower=/usr/local/bin/bower \
-    dotnet=/usr/bin/dotnet \
-    GRADLE_HOME=/usr/share/gradle \
-    grunt=/usr/local/bin/grunt \
-    JAVA_HOME=/usr/lib/jvm/java-8-oracle \
-    JAVA_HOME_6_X64=/usr/lib/jvm/java-6-oracle \
-    JAVA_HOME_7_X64=/usr/lib/jvm/java-7-oracle \
-    JAVA_HOME_8_X64=/usr/lib/jvm/java-8-oracle \
-    JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF8 \
-    M2_HOME=/usr/share/maven \
+RUN set -x \
+ && curl -fSL "https://github.com/docker/compose/releases/download/$DOCKER_COMPOSE_VERSION/docker-compose-`uname -s`-`uname -m`" -o /usr/local/bin/docker-compose \
+ && chmod +x /usr/local/bin/docker-compose \
+ && docker-compose -v
