--- a/ubuntu/16.04/tfs/2017/Dockerfile
+++ b/ubuntu/16.04/tfs/2017/Dockerfile
@@ -1,26 +1,4 @@
-FROM ubuntu:16.04
-
-RUN apt-get update \
- && apt-get install -y --no-install-recommends \
-        software-properties-common \
- && apt-add-repository ppa:git-core/ppa \
- && apt-get update \
- && apt-get install -y --no-install-recommends \
-        curl \
-        git \
-        libcurl3 \
-        libicu55 \
-        libunwind8 \
- && curl -s https://packagecloud.io/install/repositories/github/git-lfs/script.deb.sh | bash \
- && apt-get install -y --no-install-recommends git-lfs \
- && rm -rf /var/lib/apt/lists/*
-
-# Accept the TEE EULA
-RUN mkdir -p "/root/.microsoft/Team Foundation/4.0/Configuration/TEE-Mementos" \
- && cd "/root/.microsoft/Team Foundation/4.0/Configuration/TEE-Mementos" \
- && echo '<ProductIdData><eula-14.0 value="true"/></ProductIdData>' > "com.microsoft.tfs.client.productid.xml"
-
-WORKDIR /vsts
+FROM microsoft/vsts-agent:ubuntu-16.04
 
 RUN set -x \
  && curl -fSL https://github.com/Microsoft/vsts-agent/releases/download/v2.105.7/vsts-agent-ubuntu.16.04-x64-2.105.7.tar.gz -o agent.tgz \
