Fixing review comments

--- a/ubuntu/16.04/standard/Dockerfile
+++ b/ubuntu/16.04/standard/Dockerfile
@@ -81,13 +81,15 @@ RUN curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > /et
 RUN dotnet help
 
 # Configure AzCLI 2.0  Instructions taken from https://docs.microsoft.com/en-us/cli/azure/install-azure-cli
-RUN echo "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ wheezy main" | \
-     tee /etc/apt/sources.list.d/azure-cli.list \
-     && apt-key adv --keyserver packages.microsoft.com --recv-keys 417A0893 \
-     && apt-get install -y --no-install-recommends apt-transport-https \
-     && apt-get update && apt-get install -y --no-install-recommends azure-cli \
-     && rm -rf /var/lib/apt/lists/* \
-     && az --version
+RUN echo "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ wheezy main" | tee /etc/apt/sources.list.d/azure-cli.list \
+ && apt-key adv --keyserver packages.microsoft.com --recv-keys 417A0893 \
+ && apt-get install -y --no-install-recommends \
+    apt-transport-https \
+ && apt-get update \
+ && apt-get install -y --no-install-recommends \
+    azure-cli \
+ && rm -rf /var/lib/apt/lists/* \
+ && az --version
 
 # Configure environment variables
 ENV ANT_HOME=/usr/share/ant \
