Rework and validate standard image

--- a/ubuntu/14.04/standard/Dockerfile
+++ b/ubuntu/14.04/standard/Dockerfile
@@ -1,9 +1,8 @@
 FROM microsoft/vsts-agent:ubuntu-14.04
 
-# Install basic utilities and build tools
+# Install basic command-line utilities
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
-    build-essential \
     curl \
     dnsutils \
     file \
@@ -20,12 +19,26 @@ RUN apt-get update \
     tzdata \
  && rm -rf /var/lib/apt/lists/*
 
-# Install cmake
-RUN echo Downloading cmake... \
- && curl -sL https://cmake.org/files/v3.9/cmake-3.9.1-Linux-x86_64.sh -o cmake.sh \
+# Install essential build tools
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends \
+    build-essential \
+ && rm -rf /var/lib/apt/lists/*
+
+# Install Azure CLI (instructions taken from https://docs.microsoft.com/en-us/cli/azure/install-azure-cli)
+RUN echo "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ wheezy main" | tee /etc/apt/sources.list.d/azure-cli.list \
+ && apt-key adv --keyserver packages.microsoft.com --recv-keys 52E16F86FEE04B979B07E28DB02C46DF417A0893 \
+ && apt-get update \
+ && apt-get install -y --no-install-recommends \
+    apt-transport-https \
+    azure-cli \
+ && rm -rf /var/lib/apt/lists/*
+
+# Install CMake
+RUN curl -sL https://cmake.org/files/v3.10/cmake-3.10.2-Linux-x86_64.sh -o cmake.sh \
  && chmod +x cmake.sh \
  && ./cmake.sh --prefix=/usr/local --exclude-subdir \
- && rm -rf cmake.sh
+ && rm cmake.sh
 
 # Install OpenJDKs
 RUN apt-add-repository -y ppa:openjdk-r/ppa
@@ -36,18 +49,20 @@ RUN apt-get update \
  && apt-get install -y --no-install-recommends openjdk-8-jdk \
  && rm -rf /var/lib/apt/lists/*
 RUN apt-get update \
- && apt-get -o Dpkg::Options::="--force-overwrite" install -y --no-install-recommends openjdk-9-jdk \
+ && apt-get -o Dpkg::Options::="--force-overwrite" install -y --no-install-recommends openjdk-7-jdk \
  && rm -rf /var/lib/apt/lists/*
 RUN update-alternatives --set java /usr/lib/jvm/java-7-openjdk-amd64/jre/bin/java
 
-# Install Ant
+# Install Java Tools (Ant, Gradle, Maven)
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
     ant \
     ant-optional \
  && rm -rf /var/lib/apt/lists/*
-
-# Install Maven
+RUN apt-get update \
+ && apt-get install -y --no-install-recommends \
+    gradle \
+ && rm -rf /var/lib/apt/lists/*
 RUN apt-get update \
  && apt-get install -y --no-install-recommends \
     maven \
@@ -59,35 +74,21 @@ RUN curl -sL https://dl.google.com/go/go1.9.2.linux-amd64.tar.gz -o go1.9.2.linu
  && tar -C /usr/local/go1.9.2 -xzf go1.9.2.linux-amd64.tar.gz --strip-components=1 go \
  && rm go1.9.2.linux-amd64.tar.gz
 
-# Install Gradle
-RUN apt-get update \
+# Install .NET Core SDK and initialize package cache
+RUN curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > /etc/apt/trusted.gpg.d/microsoft.gpg \
+ && echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main" > /etc/apt/sources.list.d/dotnetdev.list \
+ && apt-get update \
  && apt-get install -y --no-install-recommends \
-    gradle \
- && rm -rf /var/lib/apt/lists/*
-
-# Install Python
-RUN apt-get update \
- && apt-get install -y --no-install-recommends \
-    python \
-    python3 \
- && rm -rf /var/lib/apt/lists/*
+    apt-transport-https \
+    dotnet-sdk-2.1.4 \
+ && rm -rf /var/lib/apt/lists/* \
+ && dotnet help
 
 # Install stable Node.js and related build tools
 RUN curl -sL https://git.io/n-install | bash -s -- -ny - \
  && ~/n/bin/n stable \
  && npm install -g bower grunt gulp n \
  && rm -rf ~/n
-
-# Install .NET Core SDK
-RUN curl https://packages.microsoft.com/keys/microsoft.asc | gpg --dearmor > /etc/apt/trusted.gpg.d/microsoft.gpg \
- && echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-trusty-prod trusty main" > /etc/apt/sources.list.d/dotnetdev.list \
- && apt-get update \
- && apt-get install -y --no-install-recommends \
-    dotnet-sdk-2.0.0 \
- && rm -rf /var/lib/apt/lists/*
-
-# Run dotnet command to populate initial cache
-RUN dotnet help
 
 # Install Powershell Core
 RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
@@ -97,16 +98,12 @@ RUN curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add - \
     powershell \
  && rm -rf /var/lib/apt/lists/*
 
-# Configure AzCLI 2.0  Instructions taken from https://docs.microsoft.com/en-us/cli/azure/install-azure-cli
-RUN echo "deb [arch=amd64] https://packages.microsoft.com/repos/azure-cli/ wheezy main" | tee /etc/apt/sources.list.d/azure-cli.list \
- && apt-key adv --keyserver packages.microsoft.com --recv-keys 417A0893 \
+# Install Python
+RUN apt-get update \
  && apt-get install -y --no-install-recommends \
-    apt-transport-https \
- && apt-get update \
- && apt-get install -y --no-install-recommends \
-    azure-cli \
- && rm -rf /var/lib/apt/lists/* \
- && az --version
+    python \
+    python3 \
+ && rm -rf /var/lib/apt/lists/*
 
 # Install Subversion
 RUN apt-get update \
@@ -124,7 +121,9 @@ ENV ANT_HOME=/usr/share/ant \
     JAVA_HOME=/usr/lib/jvm/java-7-openjdk-amd64 \
     JAVA_HOME_7_X64=/usr/lib/jvm/java-7-openjdk-amd64 \
     JAVA_HOME_8_X64=/usr/lib/jvm/java-8-openjdk-amd64 \
-    JAVA_HOME_9_X64=/usr/lib/jvm/java-9-openjdk-amd64 \
+    JAVA_HOME_7_X64=/usr/lib/jvm/java-7-openjdk-amd64 \
     JAVA_TOOL_OPTIONS=-Dfile.encoding=UTF8 \
-    M2_HOME=/usr/share/maven \
-    PATH=$PATH:$GOROOT/bin
+    M2_HOME=/usr/share/maven
+
+# Update path environment variable
+ENV PATH $PATH:$GOROOT/bin
